make the calls changes in from the frontend to the backend